[package]
name = "scale-playground"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"] }
hex = "0.4"
hex-literal = "0.3"
